--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "browser-image-compression": "^2.0.0",
     "firebase": "^9.9.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
